[package]
name = "morphobsd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morpho-server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-lab = "0.17"
actix-files = "0.6"
rustls = "0.23"
rustls-pemfile = "2"
unveil = "0.3.2"
pledge = "0.4.2"
